# rust-watchface

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: conventional-commits.yml  reuse.yml  rust.yml
data/: README.md
examples/: simulator-textual.rs  simulator.rs
src/: battery.rs  battery_icon.rs  font.rs  lib.rs  simple_watchface.rs  styled.rs  textual_time_watchface.rs  time.rs  watchface_data.rs
tests/: version_number.rs
