# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "watchface"
version = "0.3.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"
description = "A smartwatch watchface implementation"
repository = "https://github.com/caspermeijn/rust-watchface"
license = "GPL-3.0-or-later"
keywords = ["embedded-graphics", "watchface", "smartwatch"]

[dependencies]
embedded-graphics = "0.6.2"
embedded-layout = "0.1.0"
heapless = "0.5.5"
chrono = "0.4.11"

[dev-dependencies]
embedded-graphics-simulator = "0.2.0"
