# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "watchface"
version = "0.3.2"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"
description = "A smartwatch watchface implementation"
repository = "https://github.com/caspermeijn/rust-watchface"
license = "GPL-3.0-or-later"
keywords = ["embedded-graphics", "watchface", "smartwatch"]
resolver = "2"

[features]
default = ["std"]
std = ["chrono"]

[dependencies]
embedded-graphics = "0.7"
embedded-layout = "0.2"
heapless = "0.5"

[dependencies.chrono]
version = "0.4"
optional = true

[dev-dependencies]
embedded-graphics-simulator = "0.3"

[[example]]
name = "simulator"
required-features = ["chrono"]

[[example]]
name = "simulator-textual"
required-features = ["chrono"]
